# radiant-mlhub

./: .bumpversion.cfg  .flake8  .flake8_nb  .gitignore  .mypy.ini  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SUPPORT.md  docker-compose.yaml  pyproject.toml  requirements_dev.txt  requirements_docs.txt  requirements_testing.txt  setup.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  run-unit-tests-vs-staging.yml  run-unit-tests.yml
binder/: requirements.txt
docs/: Makefile
docs/adr/: 0001-record-architecture-decisions.md  0002-resolving-api-keys.md
docs/source/: authentication.rst  cli.rst  collections.rst  conf.py  datasets.rst  getting_started.rst  index.rst  ml_models.rst
docs/source/api/: modules.rst  radiant_mlhub.client.rst  radiant_mlhub.models.rst  radiant_mlhub.rst
examples/: Datasets & Collections.ipynb  Models.ipynb  Working with Collections.ipynb  dataset_downloads.ipynb  index.ipynb
radiant_mlhub/: __init__.py  cli.py  client.py  exceptions.py  if_exists.py  models.py  retry_config.py  session.py  util.py
radiant_mlhub/client/: __init__.py  catalog_downloader.py  collections.py  datasets.py  datetime_utils.py  ml_models.py  resumable_downloader.py
radiant_mlhub/models/: Collection.py  Dataset.py  MLModel.py  __init__.py  collection.py  dataset.py  ml_model.py
recipe/: build.sh  meta.yaml
test/: conftest.py  test_cli.py  test_client.py  test_models.py  test_session.py  util.py
test/cassettes/test_client/: TestAnonymousClient.test_get_collection_anonymously_works.yaml  TestAnonymousClient.test_list_collection_items_anonymously_does_not_work.yaml  TestAnonymousClient.test_list_collections_anonymously_works.yaml  TestAnonymousClient.test_list_datasets_anonymously_works.yaml  TestAnonymousClient.test_list_ml_models_anonymously_works.yaml  TestClient.test_collection_does_not_exist.yaml  TestClient.test_dataset_does_not_exist.yaml  TestClient.test_download_archive.yaml  TestClient.test_download_archive_does_not_exist.yaml  TestClient.test_get_collection_item.yaml  TestClient.test_get_collection_item_errors.yaml  TestClient.test_list_collection_items.yaml  TestClient.test_overwrite_download_exists.yaml  TestClient.test_skip_download_exists.yaml  TestClientAuthenticatedEndpoints.test_download_archive.yaml  TestClientAuthenticatedEndpoints.test_download_archive_does_not_exist.yaml  TestClientAuthenticatedEndpoints.test_download_collection_archive.yaml  TestClientAuthenticatedEndpoints.test_download_collection_archive_does_not_exist.yaml  TestClientAuthenticatedEndpoints.test_get_collection_item.yaml  TestClientAuthenticatedEndpoints.test_get_collection_item_errors.yaml  TestClientAuthenticatedEndpoints.test_list_collection_items.yaml  TestClientAuthenticatedEndpoints.test_overwrite_download_collection_archive_exists.yaml  TestClientAuthenticatedEndpoints.test_overwrite_download_exists.yaml  TestClientAuthenticatedEndpoints.test_skip_download_collection_archive_exists.yaml  TestClientAuthenticatedEndpoints.test_skip_download_exists.yaml  TestClientCustomUrl.test_get_archive_info.yaml  TestClientCustomUrl.test_get_collection.yaml  TestClientCustomUrl.test_get_dataset.yaml  TestClientCustomUrl.test_list_datasets_custom_url.yaml
test/cassettes/test_models/: TestCollection.test_download_archive.yaml  TestCollection.test_fetch_collection.yaml  TestCollection.test_fetch_item.yaml  TestCollection.test_get_archive_size.yaml  TestCollection.test_get_items_error.yaml  TestCollection.test_get_registry_url.yaml  TestCollection.test_get_registry_url_no_doi.yaml  TestCollection.test_list_collections.yaml  TestCollectionAuthenticatedEndpoints.test_download_archive.yaml  TestCollectionAuthenticatedEndpoints.test_fetch_item.yaml  TestDataset.test_fetch_dataset.yaml  TestDataset.test_list_datasets.yaml  TestDataset.test_total_archive_size.yaml  TestMLModel.test_fetch_ml_model.yaml  TestMLModel.test_fetch_ml_model_by_id.yaml  TestMLModel.test_list_ml_models.yaml  TestMLModel.test_ml_model_resolves_links.yaml
test/cassettes/test_session/: TestCollection.test_download_archive.yaml  TestCollection.test_fetch_collection.yaml  (+10 more)
test/data/: README.txt  bigearthnet_v1_dataset.json  bigearthnet_v1_labels.json  bigearthnet_v1_source.json  bigearthnet_v1_source_item.json  bigearthnet_v1_source_items_0.json  bigearthnet_v1_source_items_1.json  collections_list.json  datasets_list.json  su_african_crops_south_sudan_labels.json
test/models/: test_collection.py  test_dataset.py  test_ml_model.py
(+41 files in other folders)
